add bootsrap , navbar & sidebar app routing

--- a/frontend/src/main/angular/src/app/app.component.html
+++ b/frontend/src/main/angular/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <div class="sidebar" data-background-color="white" data-active-color="danger">
+    <sidebar-cmp></sidebar-cmp>
+  </div>
+
+  <div class="main-panel">
+    <navbar-cmp></navbar-cmp>
+
+    <router-outlet></router-outlet>
+  </div>
+</div>
