--- a/frontend/src/main/angular/src/styles.css
+++ b/frontend/src/main/angular/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./assets/css/bootstrap.min.css";
+.nav.navbar-nav.navbar-right i+p {
+  margin-left: 8px;
+  margin-right: 5px;
+}
