add angular components

--- a/frontend/src/main/angular/src/app/sidebar/sidebar.component.html
+++ b/frontend/src/main/angular/src/app/sidebar/sidebar.component.html
@@ -4,18 +4,18 @@
       <div class="logo-img">
         <img src="../../assets/img/angular2-logo.png" alt="" />
       </div>
-      Flight42
+      Sudoku
     </a>
   </div>
   <ul class="nav">
     <li>
       <a routerLink="/home">
         <i class="ti-home"></i>
-        <p>Home</p>
+        <p>New</p>
       </a>
     </li>
 
-    <li>
+    <!-- <li>
       <a routerLink="/flight-search">
         <i class="ti-arrow-top-right"></i>
         <p>Flights</p>
@@ -47,6 +47,6 @@
         <i class="ti-close"></i>
         <p>Hide Basket</p>
       </a>
-    </li>
+    </li> -->
   </ul>
 </div>
