--- a/frontend/src/main/angular/src/app/sudokugrid/grid/grid.component.html
+++ b/frontend/src/main/angular/src/app/sudokugrid/grid/grid.component.html
@@ -1,1 +1,28 @@
-hallo
+<ng-container *ngIf="sudoku">
+  <pre>{{ sudoku | json }}</pre>
+
+  <!-- <div class="container-fluid">
+    <div class="row" *ngFor="let ydcim of sudoku.yDim; index as i">
+      <div class="btn-group" *ngFor="let xdcim of sudoku.xDim; index as j">
+        <button type="button" class="btn btn-default col-md-4">Button 1</button>
+        <button type="button" class="btn btn-default col-md-4">Button 2</button>
+        <button type="button" class="btn btn-default col-md-4">Button 3</button>
+      </div>
+    </div> -->
+
+  <!-- <div class="row">
+      <div class=" btn-group">
+        <button type="button" class="btn btn-default col-md-4">Button 4</button>
+        <button type="button" class="btn btn-default col-md-4">Button 5</button>
+        <button type="button" class="btn btn-default col-md-4">Button 6</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class=" btn-group">
+        <button type="button" class="btn btn-default col-md-4">Button 7</button>
+        <button type="button" class="btn btn-default col-md-4">Button 8</button>
+        <button type="button" class="btn btn-default col-md-4">Button 9</button>
+      </div>
+    </div -->
+  <!-- </div> -->
+</ng-container>
