--- a/frontend/src/main/angular/src/app/sudokugrid/block/block.component.html
+++ b/frontend/src/main/angular/src/app/sudokugrid/block/block.component.html
@@ -1,3 +1,7 @@
-<p>
-  block works!
-</p>
+<div class="container-fluid">
+  <div class="row" *ngFor="let fieldYArray of blockGrid">
+    <div class="btn-group" *ngFor="let fieldX of fieldYArray">
+      <field [field]="fieldX"></field>
+    </div>
+  </div>
+</div>
