--- a/frontend/src/main/angular/src/app/sudokugrid/field/field.component.html
+++ b/frontend/src/main/angular/src/app/sudokugrid/field/field.component.html
@@ -1,1 +1,9 @@
-{{ field.value }}
+<div class="field-style dropdown" (click)="onFieldClick()">
+  <button type="button">
+    {{ field.value }}
+  </button>
+
+  <div class="dropdown-content">
+    <p>Hello World!</p>
+  </div>
+</div>
