--- a/frontend/src/main/angular/src/app/sudokugrid/field/field.component.css
+++ b/frontend/src/main/angular/src/app/sudokugrid/field/field.component.css
@@ -16,6 +16,15 @@ button {
   border: 0px;
 }
 
+.dropbtn {
+  background-color: #c2c9c2;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
 .dropdown {
   position: relative;
   display: inline-block;
@@ -33,4 +42,16 @@ button {
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
 }
