adapt angular frontend to isHidden attribute

--- a/frontend/src/main/angular/src/app/sudokugrid/field/possiblevalues/possiblevalues/possiblevalues.component.html
+++ b/frontend/src/main/angular/src/app/sudokugrid/field/possiblevalues/possiblevalues/possiblevalues.component.html
@@ -1,9 +1,11 @@
 <div>
   <a
     href="#"
-    *ngFor="let value of possibleValues"
-    (click)="valueClicked(value)"
+    *ngFor="let possibleValue of possibleValues"
+    (click)="valueClicked(possibleValue)"
   >
-    {{ value }}
+    <ng-container *ngIf="possibleValue.isHidden === false">
+      {{ possibleValue.value }}
+    </ng-container>
   </a>
 </div>
