move SudokuResource config blocks & fields in convertern

--- a/frontend/src/main/angular/src/app/sudokugrid/block/block.component.html
+++ b/frontend/src/main/angular/src/app/sudokugrid/block/block.component.html
@@ -7,7 +7,7 @@
     [style.grid-template-columns]="xFields"
   >
     <ng-container *ngFor="let field of block.sudokuFields">
-      <field [field]="field"></field>
+      <field [field]="field" [block]="block"></field>
     </ng-container>
   </div>
 </div>
