--- a/frontend/src/main/angular/src/app/sudokugrid/field/field.component.html
+++ b/frontend/src/main/angular/src/app/sudokugrid/field/field.component.html
@@ -7,7 +7,8 @@
       <p>
         <possiblevalues
           [possibleValues]="field.possibleValues"
-          [(field)]="field"
+          [field]="field"
+          [block]="block"
         ></possiblevalues>
       </p>
     </div>
