add FieldValueChangedModel sudiku removeValues introduced instead of hiding add hidden attribute & css style setfieldvalue is now handled by the backend

--- a/frontend/src/main/angular/src/app/sudokugrid/field/possiblevalues/possiblevalues/possiblevalues.component.html
+++ b/frontend/src/main/angular/src/app/sudokugrid/field/possiblevalues/possiblevalues/possiblevalues.component.html
@@ -4,8 +4,10 @@
     *ngFor="let possibleValue of possibleValues"
     (click)="valueClicked(possibleValue)"
   >
-    <ng-container *ngIf="possibleValue.isHidden === false">
+    <span
+      [className]="possibleValue.isHidden === true ? 'isHidden' : 'choosable'"
+    >
       {{ possibleValue.value }}
-    </ng-container>
+    </span>
   </a>
 </div>
