--- a/frontend/src/main/angular/src/app/sudokugrid/field/field.component.css
+++ b/frontend/src/main/angular/src/app/sudokugrid/field/field.component.css
@@ -19,8 +19,8 @@ button {
 .isInitialField {
   background-color: #96ad96;
   color: white;
-  padding: 16px;
-  font-size: 16px;
+  /* padding: 16px; */
+  /* font-size: 16px; */
   border: none;
   cursor: pointer;
 }
@@ -28,8 +28,8 @@ button {
 .isNotInitialField {
   background-color: #c2c9c2;
   color: rgb(255, 255, 255);
-  padding: 16px;
-  font-size: 16px;
+  /* padding: 16px; */
+  /* font-size: 16px; */
   border: none;
   cursor: pointer;
 }
