--- a/frontend/src/main/angular/src/app/app.component.html
+++ b/frontend/src/main/angular/src/app/app.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="main-panel">
-    <navbar-cmp></navbar-cmp>
+    <!-- <navbar-cmp></navbar-cmp> -->
 
     <router-outlet></router-outlet>
   </div>
