--- a/frontend/src/main/angular/src/app/main-content/main-content.component.html
+++ b/frontend/src/main/angular/src/app/main-content/main-content.component.html
@@ -1,7 +1,9 @@
-<div class="grid">
-  <grid></grid>
-  <grid-hint></grid-hint>
-</div>
-<button type="button" class="btn btn-primary" (click)="helpMeClicked()">
-  Help me!
-</button>
+<ng-container *ngIf="sudoku">
+  <div class="grid">
+    <grid [sudoku]="sudoku"></grid>
+    <grid-hint></grid-hint>
+  </div>
+  <button type="button" class="btn btn-primary" (click)="helpMeClicked()">
+    Help me!
+  </button>
+</ng-container>
