add isValueReserved to sudofield add comfort method to field.component

--- a/frontend/src/main/angular/src/app/sudokugrid/field/field.component.css
+++ b/frontend/src/main/angular/src/app/sudokugrid/field/field.component.css
@@ -24,7 +24,7 @@ button {
   cursor: pointer;
 }
 
-.isNotInitialField {
+.isDefaultField {
   background-color: rgb(170, 170, 170);
   color: white;
   border: none;
