add solve step add help em functionality

--- a/frontend/src/main/angular/src/app/main-content/main-content.component.html
+++ b/frontend/src/main/angular/src/app/main-content/main-content.component.html
@@ -6,4 +6,15 @@
   <button type="button" class="btn btn-primary" (click)="helpMeClicked()">
     Help me!
   </button>
+  <!-- <pre>{{ sudoku | json }}</pre> -->
+  <!-- <div class="grid">
+    <ng-container *ngIf="sudoku.snapshots && sudoku.snapshots.length > 0">
+      <ul *ngFor="let s of sudoku.snapshots; index as i">
+        <ng-container *ngIf="i < 10">
+          <grid [sudokusnapshot]="sudoku.snapshots[i]"></grid>
+          {{ sudoku.snapshots[i].message }}
+        </ng-container>
+      </ul>
+    </ng-container>
+  </div> -->
 </ng-container>
