--- a/frontend/src/main/angular/src/app/sudokugrid/grid-hint/grid-hint.component.html
+++ b/frontend/src/main/angular/src/app/sudokugrid/grid-hint/grid-hint.component.html
@@ -1,8 +1,12 @@
-<ng-container *ngIf="sudokuSnapshot">
+<ng-container *ngIf="sudokuSnapshots">
   <div class="grid">
-    <div><grid [sudokusnapshot]="sudokuSnapshot"></grid></div>
-    <div>{{ sudokuSnapshot.message }}</div>
-    <div></div>
-    <div></div>
+    <div *ngFor="let sudokuSnapshot of sudokuSnapshots">
+      <div><grid [sudokusnapshot]="sudokuSnapshot"></grid></div>
+      <div>{{ sudokuSnapshot.message }}</div>
+    </div>
+    <!-- <div>
+      <pre>{{ sudokuSnapshot | json }}</pre>
+    </div> -->
+    <!-- <div></div> -->
   </div>
 </ng-container>
