--- a/frontend/src/main/angular/src/app/sudokugrid/block/block.component.css
+++ b/frontend/src/main/angular/src/app/sudokugrid/block/block.component.css
@@ -2,7 +2,8 @@
   /* width: 60px; */
   display: grid;
   grid-gap: 2px;
-  /* grid-auto-flow: row; */
+  grid-auto-flow: row;
+  height: 100%;
 }
 
 .block-style {
