--- a/frontend/src/main/angular/src/app/sudokugrid/field/field.component.css
+++ b/frontend/src/main/angular/src/app/sudokugrid/field/field.component.css
@@ -12,7 +12,7 @@ button {
   height: 100%;
   width: 100%;
   background-color: transparent;
-  font-size: 2rem;
+  font-size: 2ch;
   border-radius: 0px;
   border: 0px;
 }
