--- a/frontend/src/main/angular/src/app/sudokugrid/grid/grid.component.css
+++ b/frontend/src/main/angular/src/app/sudokugrid/grid/grid.component.css
@@ -1,6 +1,16 @@
-.blockgrid {
+.blockgrid-sudokumodel {
   /* width: 600px; */
   /* height: 450px; */
+  background-color: #444;
+  display: grid;
+  grid-gap: 5px;
+  /* grid-auto-flow: row; */
+}
+
+.blockgrid-sudokusnapshotmodel {
+  /* width: 600px; */
+  /* height: 450px; */
+  height: 100%;
   background-color: #444;
   display: grid;
   grid-gap: 5px;
