add routing an generatedsnapshotconverter

--- a/frontend/src/main/angular/src/app/sidebar/sidebar.component.html
+++ b/frontend/src/main/angular/src/app/sidebar/sidebar.component.html
@@ -13,6 +13,10 @@
         <i class="ti-home"></i>
         <p>New</p>
       </a>
+        <a routerLink="/generatesudoku">
+            <i class="ti-home"></i>
+            <p>Generate Sudoku</p>
+        </a>
     </li>
 
     <!-- <li>
