--- a/frontend/src/main/angular/src/app/app.component.html
+++ b/frontend/src/main/angular/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="wrapper">
-  <div class="sidebar" data-background-color="white" data-active-color="danger">
-    <sidebar-cmp></sidebar-cmp>
-  </div>
+<!--<div class="wrapper">-->
+<!--    <div class="sidebar" data-background-color="white" data-active-color="danger">-->
+<!--        <sidebar-cmp></sidebar-cmp>-->
+<!--    </div>-->
 
-  <div class="main-panel">
-    <!-- <navbar-cmp></navbar-cmp> -->
+<!--    <div class="main-panel">-->
+<!--        <router-outlet></router-outlet>-->
+<!--    </div>-->
+<!--</div>-->
 
-    <router-outlet></router-outlet>
-  </div>
-</div>
+<router-outlet></router-outlet>
